--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
         "libheif",
         "libimage",
         "libwebp",
+        "minq",
         "noninteractive",
         "optipng",
         "PNGQ",
         "pngquant",
+        "qlist",
         "rargs",
         "vcodec",
         "vsync",
