fix: convert all actually

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "buildx",
         "color",
         "cwebp",
+        "elif",
         "exiftool",
         "jpegoptim",
         "libavif",
