--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "libwebp",
         "minq",
         "noninteractive",
+        "oneline",
         "optipng",
         "PNGQ",
         "pngquant",
