--- a/.github/workflows/build-and-publish-ghcr.yml
+++ b/.github/workflows/build-and-publish-ghcr.yml
@@ -65,7 +65,7 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.imageTags.outputs.tags }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
