feat: use ffmpeg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "elif",
         "exiftool",
         "jpegoptim",
+        "jrottenberg",
         "libavif",
         "libheif",
         "libimage",
