fix: add summary log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "cwebp",
         "elif",
         "exiftool",
+        "ffprobe",
         "jpegoptim",
         "jrottenberg",
         "libavif",
